--- a/ans.html
+++ b/ans.html
@@ -3,6 +3,6 @@
 
    </head>
    <body>
-This is our website version created on 0702 v1
+This is our website version created for ansible version 1
    </body>
 </html>
